Avance Implementacion Correcion de Inconistencias de datos por registro Accounts - Movements

--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -321,7 +321,7 @@
         <td class="Celdas-Tabla ">{{automatic.sign}}</td>
         <td class="Celdas-Tabla ">{{automatic.detail}}</td>
         <td class="Celdas-Tabla ">{{(automatic.initial_date == '0000-00-00') ? automatic.initial_date : automatic.initial_date | date: 'dd/MMMM/yyyy'}}</td>
-        <td class="Celdas-Tabla ">{{(automatic.final_date == '0000-00-00') ? automatic.final_date : automatic.next_date | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla ">{{(automatic.next_date == '0000-00-00') ? automatic.next_date : automatic.next_date | date: 'dd/MMMM/yyyy'}}</td>
         <td class="Celdas-Tabla ">{{automatic.operation_code}}</td>
         <td class="Celdas-Tabla ">{{automatic.rate}}</td>
         <td class="Celdas-Tabla ">{{automatic.counter}}</td>
@@ -365,7 +365,7 @@
         <td class="Celdas-Tabla ">{{automatic.sign}}</td>
         <td class="Celdas-Tabla ">{{automatic.detail}}</td>
         <td class="Celdas-Tabla ">{{(automatic.initial_date == '0000-00-00') ? automatic.initial_date : automatic.initial_date | date: 'dd/MMMM/yyyy'}}</td>
-        <td class="Celdas-Tabla ">{{(automatic.final_date == '0000-00-00') ? automatic.final_date : automatic.next_date | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla ">{{(automatic.next_date == '0000-00-00') ? automatic.next_date : automatic.next_date | date: 'dd/MMMM/yyyy'}}</td>
         <td class="Celdas-Tabla ">{{automatic.operation_code}}</td>
         <td class="Celdas-Tabla ">{{automatic.rate}}</td>
         <td class="Celdas-Tabla ">{{automatic.counter}}</td>
