--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
@@ -1,11 +1,73 @@
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
-  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
-</ngx-spinner>
+<div class="modal fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="modalCategoryTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalCategoryTitle">Corregir Inconsistencia Category</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+          <div class="row" style="width: 100%; display: block; margin-bottom: 20px;" >
+            <h5 class="text-center font-weight-500">¿ Esta seguro de corregir las {{categorySelected.repeated}} inconsistencias de la siguiente Categoria?</h5>
+            <h5 class="text-center font-weight-normal" >Id_Backup: {{categorySelected.id_backup}}</h5>
+          </div>
+
+          <fieldset class="form-group" >
+            <div class="form-row">
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation2" name="sign" value="+" [(ngModel)]="categorySelected.sign" disabled>
+                  <label class="custom-control-label" for="customControlValidation2">Ingresos</label>
+                </div>
+              </div>
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation3" name="sign" value="-" [(ngModel)]="categorySelected.sign" disabled>
+                  <label class="custom-control-label" for="customControlValidation3">Gastos</label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="form col">
+                <label for="id_category">Id_Category</label>
+                <input type="number" class="form-control" id="id_category" [(ngModel)]="categorySelected.id_category" readonly>
+              </div>
+              <div class="form col">
+                <label for="id_account">Account: </label>
+                <input type="text" class="form-control" id="id_account" [(ngModel)]="categorySelected.nameAccount" readonly>
+              </div>
+            </div>
+          </div>
+
+          <div class="form">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" [(ngModel)]="categorySelected.name" readonly>
+          </div>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="form col">
+                <label for="icon_name">Icon_Name</label>
+                <input type="text" class="form-control" id="icon_name" [(ngModel)]="categorySelected.icon_name" readonly>
+              </div>
+              <div class="form col">
+                <label for="number">Number</label>
+                <input type="number" class="form-control" id="number" [(ngModel)]="categorySelected.number" readonly>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="submit" class="btn btn-primary" (click)="corregirInconsistenciaRegistro()">Corregir</button>
+        </div>
+    </div>
+  </div>
+</div>
 
 <div class="container text-center" *ngIf="categoriesService.Categories.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
@@ -46,7 +108,7 @@
       <th scope="col" class="Encabezado-Tabla">Number</th>
       <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody *ngIf="!categoriesService.isFilter()">
+    <tbody >
     <tr *ngFor="let category of categoriesService.Categories; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
@@ -59,7 +121,7 @@
       <td class="Celdas-Tabla">{{category.icon_name}}</td>
       <td class="Celdas-Tabla">{{category.number}}</td>
       <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+        <button type="button" class="btn btn-primary btn-Mnt-Inconsistencia" (click)="accionCorregirRegistro(category, i)">
           <span>
             <fa-icon [icon]="util.faTools"></fa-icon>
           </span>
@@ -75,27 +137,6 @@
     </div>
     <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
     <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
-    </tbody>
-    <tbody *ngIf="categoriesService.isFilter()">
-    <tr *ngFor="let category of categoriesService.categoriesFilter; let i = index" >
-      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
-      <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
-      <td class="Celdas-Tabla">{{category.id_backup}}</td>
-      <td class="Celdas-Tabla">{{category.id_account}}</td>
-      <td class="Celdas-Tabla">{{category.nameAccount}}</td>
-      <td class="Celdas-Tabla">{{category.id_category}}</td>
-      <td class="Celdas-Tabla">{{category.name}}</td>
-      <td class="Celdas-Tabla">{{category.sign}}</td>
-      <td class="Celdas-Tabla">{{category.icon_name}}</td>
-      <td class="Celdas-Tabla">{{category.number}}</td>
-      <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
-          <span>
-            <fa-icon [icon]="util.faTools"></fa-icon>
-          </span>
-        </button>
-      </td>
-    </tr>
     </tbody>
   </table>
 </div>
