--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
@@ -1,11 +1,196 @@
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
-  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
-</ngx-spinner>
+<div class="modal fade" id="modalMovement" tabindex="-1" role="dialog" aria-labelledby="modalMovementTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="movement != null">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalMovementTitle">Corregir Inconsistencia Movement</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+          <div class="row" style="width: 100%; display: block; margin-bottom: 20px;">
+            <h5 class="text-center font-weight-500">¿ Esta seguro de eliminar el Movimiento {{(movement.value.sign == "-") ? "Gasto" : "Ingreso"}} del Respaldo Id_backup: {{movementsService.id_backup}} ?</h5>
+          </div>
+
+          <fieldset class="form-group" >
+            <div class="form-row">
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation2" name="sign" (change)="changeEvent($event)" value="+" formControlName="sign" [ngClass]="(getError('sign') == '') ? 'valid-control' : 'invalid-control'">
+                  <label class="custom-control-label" for="customControlValidation2">Ingresos</label>
+                </div>
+              </div>
+              <div class="form col checkRadioCenter">
+                <div class="custom-control custom-radio width-90">
+                  <input type="radio" class="custom-control-input" id="customControlValidation3" name="sign"  (change)="changeEvent($event)" value="-" formControlName="sign" [ngClass]="(getError('sign') == '') ? 'valid-control' : 'invalid-control'">
+                  <label class="custom-control-label" for="customControlValidation3">Gastos</label>
+                </div>
+              </div>
+              <div class="invalid-feedback">{{ getError('sign')}}</div>
+            </div>
+          </fieldset>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="form col">
+                <label for="id_account">Account: </label>
+                <select class="form-control" id="id_account" formControlName="id_account" [ngClass]="(getError('id_account') == '') ? 'valid-control' : 'invalid-control'" (change)="accountSelectedModal($event)">
+                  <option *ngIf="movementsService.AccountsBackup.length > 0" value="">Seleccione una cuenta</option>
+                  <option *ngFor="let account of movementsService.AccountsBackup" [value]="account.id_account">{{account.name}}</option>
+                </select>
+              </div>
+              <div class="form col">
+                <label for="id_category">Category: </label>
+                <select class="form-control" id="id_category" formControlName="id_category" [ngClass]="(getError('id_category') == '') ? 'valid-control' : 'invalid-control'">
+
+                  <ng-container *ngIf="movement.value.id_account != ''"><!-- Listar todas las categorias de la cuenta seleccionada-->
+                    <option *ngIf="movementsService.AccountsBackup[indexMovementSelectModal - 1].categoriesAccount.length > 0" value="">Seleccione una categoria</option>
+                    <ng-container *ngFor="let category of movementsService.AccountsBackup[indexMovementSelectModal - 1].categoriesAccount">
+                      <option *ngIf="category.sign == movement.value.sign" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
+                    </ng-container>
+                  </ng-container>
+
+                  <ng-container *ngIf="movement.value.id_account == ''"><!-- Listar todas las categorias de todas la cuentas-->
+                    <option value="">Seleccione una categoria</option>
+                    <ng-container *ngFor="let account of movementsService.AccountsBackup">
+                      <ng-container *ngFor="let category of account.categoriesAccount">
+                        <option *ngIf="category.sign == movement.value.sign" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
+                      </ng-container>
+                    </ng-container>
+                  </ng-container>
+                  <option value="10000">TRANSFERENCIAS</option>
+
+                </select>
+              </div>
+              <div class="form col">
+                <label for="amount">Amount</label>
+                <input type="number" class="form-control" id="amount" formControlName="amount" [step]="util.stepDecimal" [ngClass]="(getError('amount') == '') ? 'valid-control' : 'invalid-control'">
+                <div class="invalid-feedback">{{ getError('amount')}}</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="detail">Detail: </label>
+            <textarea  type="text" class="form-control" id="detail" formControlName="detail" [ngClass]="(getError('detail') == '') ? 'valid-control' : 'invalid-control'"></textarea>
+            <div class="invalid-feedback">{{ getError('detail')}}</div>
+          </div>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <label for="date_record">Date_Record</label>
+                <input [owlDateTimeTrigger]="date" (dateTimeChange)="changeDateTime($event, true)" [owlDateTime]="date" class="form-control" id="date_record" formControlName="date_record" placeholder="date_record" [ngClass]="(getError('date_record') == '') ? 'valid-control' : 'invalid-control'">
+                <owl-date-time [pickerType]="'calendar'" #date></owl-date-time>
+                <div class="invalid-feedback">{{ getError('date_record')}}</div>
+              </div>
+              <div class="col">
+                <label for="time_record">Time_Record</label>
+                <input [owlDateTimeTrigger]="timer" (dateTimeChange)="changeDateTime($event, false)" [owlDateTime]="timer" class="form-control" id="time_record" formControlName="time_record" placeholder="time_record" [ngClass]="(getError('time_record') == '') ? 'valid-control' : 'invalid-control'">
+                <owl-date-time [pickerType]="'timer'" #timer ></owl-date-time>
+                <div class="invalid-feedback">{{ getError('time_record')}}</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="confirmed" formControlName="confirmed" [ngClass]="(getError('confirmed') == '') ? 'valid-control' : 'invalid-control'" >
+                      <label class="custom-control-label" for="confirmed">Confirmed</label>
+                      <div class="invalid-feedback">{{ getError('confirmed')}}</div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="transfer" formControlName="transfer" [ngClass]="(getError('transfer') == '') ? 'valid-control' : 'invalid-control'">
+                      <label class="custom-control-label" for="transfer">Transfer</label>
+                      <div class="invalid-feedback">{{ getError('transfer')}}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <label for="date_idx">Date_Idx: </label>
+                <input [readOnly]="true" type="text" class="form-control" id="date_idx" formControlName="date_idx" [ngClass]="(getError('date_idx') == '') ? 'valid-control' : 'invalid-control'">
+                <div class="invalid-feedback">{{ getError('date_idx')}}</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="form-row">
+              <div class="form col">
+                <div class="row">
+                  <div class="col">
+                    <label for="week">Week</label>
+                    <input [readOnly]="true" type="number" class="form-control" id="week" formControlName="week" [ngClass]="(getError('week') == '') ? 'valid-control' : 'invalid-control'">
+                    <div class="invalid-feedback">{{ getError('week')}}</div>
+                  </div>
+                  <div class="col">
+                    <label for="fortnight">Fortnight</label>
+                    <input [readOnly]="true" type="number" class="form-control" id="fortnight" formControlName="fortnight" [ngClass]="(getError('fortnight') == '') ? 'valid-control' : 'invalid-control'">
+                    <div class="invalid-feedback">{{ getError('fortnight')}}</div>
+                  </div>
+                </div>
+              </div>
+              <div class="form col">
+                <div class="row">
+                  <div class="col">
+                    <label for="day">Day</label>
+                    <input [readOnly]="true" type="number" class="form-control" id="day" formControlName="day" [ngClass]="(getError('day') == '') ? 'valid-control' : 'invalid-control'">
+                    <div class="invalid-feedback">{{ getError('day')}}</div>
+                  </div>
+                  <div class="col">
+                    <label for="month">Month</label>
+                    <select disabled class="form-control disabled" id="month" formControlName="month" [ngClass]="(getError('month') == '') ? 'valid-control' : 'invalid-control'">
+                      <option value="">Seleccione un mes</option>
+                      <option *ngFor="let month of util.nameMonth" [value]="(month.value < 10) ? '0' + month.value : month.value">{{month.nameSorth}}</option>
+                    </select>
+                    <div class="invalid-feedback">{{ getError('month')}}</div>
+                  </div>
+                  <div class="col">
+                    <label for="year">Year</label>
+                    <input [readOnly]="true" type="number" class="form-control" id="year" formControlName="year" [ngClass]="(getError('year') == '') ? 'valid-control' : 'invalid-control'">
+                    <div class="invalid-feedback">{{ getError('year')}}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="form row">
+              <div class="form col">
+                <label for="operation_code">Operation_Code</label>
+                <input type="text" class="form-control" id="operation_code" formControlName="operation_code" [ngClass]="(getError('operation_code') == '') ? 'valid-control' : 'invalid-control'">
+                <div class="invalid-feedback">{{ getError('operation_code')}}</div>
+              </div>
+              <div class="col">
+                <label for="iso_code">Iso_Code</label>
+                <input type="text" class="form-control" id="iso_code" formControlName="iso_code" [readOnly]="true" [ngClass]="(getError('iso_code') == '') ? 'valid-control' : 'invalid-control'">
+                <div class="invalid-feedback">{{ getError('iso_code')}}</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="picture">Picture</label>
+            <input type="text" class="form-control" id="picture" formControlName="picture" [ngClass]="(getError('picture') == '') ? 'valid-control' : 'invalid-control'">
+            <div class="invalid-feedback">{{ getError('picture')}}</div>
+          </div>
+
+        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="submit" class="btn btn-primary" (click)="corregirInconsistenciaRegistro()">Corregir</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="container text-center" *ngIf="movementsService.Movements.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
@@ -71,7 +256,7 @@
       <th scope="col" class="Encabezado-Tabla">Iso_code</th>
       <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody *ngIf="!movementsService.isFilter()">
+    <tbody >
     <tr *ngFor="let movement of movementsService.Movements; let i = index" >
       <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
       <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
@@ -97,7 +282,7 @@
       <td class="Celdas-Tabla">{{movement.picture}}</td>
       <td class="Celdas-Tabla">{{movement.iso_code}}</td>
       <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+        <button type="button" class="btn btn-primary btn-Mnt-Inconsistencia" (click)="accionCorregirRegistro(movement, i)">
           <span>
             <fa-icon [icon]="util.faTools"></fa-icon>
           </span>
@@ -113,40 +298,6 @@
     </div>
     <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
     <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
-    </tbody>
-    <tbody *ngIf="movementsService.isFilter()">
-    <tr *ngFor="let movement of movementsService.movementsFilter; let i = index" >
-      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
-      <td class="Celdas-Tabla font-italic">{{movement.repeated}}</td>
-      <td class="Celdas-Tabla">{{movement.id_backup}}</td>
-      <td class="Celdas-Tabla">{{movement.id_account}}</td>
-      <td class="Celdas-Tabla">{{movement.nameAccount}}</td>
-      <td class="Celdas-Tabla">{{movement.id_category}}</td>
-      <td class="Celdas-Tabla">{{movement.nameCategory}}</td>
-      <td class="Celdas-Tabla">{{movement.amount | currency: movement.symbol :'symbol': util.symbolDecimalNumber6Digits}}</td>
-      <td class="Celdas-Tabla">{{movement.sign}}</td>
-      <td class="Celdas-Tabla">{{movement.detail}}</td>
-      <td class="Celdas-Tabla ">{{(movement.date_record == '0000-00-00') ? movement.date_record : movement.date_record  | date: 'dd/MMMM/yyyy'}}</td>
-      <td class="Celdas-Tabla">{{movement.time_record}}</td>
-      <td class="Celdas-Tabla">{{movement.confirmed}}</td>
-      <td class="Celdas-Tabla">{{movement.transfer}}</td>
-      <td class="Celdas-Tabla">{{movement.date_idx}}</td>
-      <td class="Celdas-Tabla">{{movement.day}}</td>
-      <td class="Celdas-Tabla">{{movement.week}}</td>
-      <td class="Celdas-Tabla">{{movement.fortnight}}</td>
-      <td class="Celdas-Tabla">{{movement.month}}</td>
-      <td class="Celdas-Tabla">{{movement.year}}</td>
-      <td class="Celdas-Tabla">{{movement.operation_code}}</td>
-      <td class="Celdas-Tabla">{{movement.picture}}</td>
-      <td class="Celdas-Tabla">{{movement.iso_code}}</td>
-      <td class="Celdas-Tabla">
-        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
-          <span>
-            <fa-icon [icon]="util.faTools"></fa-icon>
-          </span>
-        </button>
-      </td>
-    </tr>
     </tbody>
   </table>
 </div>
